# carisma_website

./: README.md  index-cat.html  index-en.html  index-es.html  index-fr.html  index.html  notes.md  server.php
backend/: CMakeLists.txt  a.out  main.cpp
css/: Footer.css  Frame1.css  Frame2.css  Frame3.css  Frame4.css  Frame5.css  Frame5_AboutUs.css  Modal.css  NavBar.css  style.css
docs/: documentation.txt  index.txt  logic.txt  style.txt
frontend/: index.html
js/: logic.js  modalButtons.js  volunteer.js  volunteer.js.txt
